--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type: "text/css"; rel="stylesheet"; href="mi-estilo.css"/>
+		<link type= "text/css"; rel="stylesheet"; href="mi-estilo.css"/>
+		<a href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+		<a href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 		<title>LaprimerapáginadeEmiliaAlcocer</title>
 	</head>
 	<body>
 	<div class= "Contenido">
 	<h1>Ventajas de saber hacer una pagina web</h1>
-
 <p>1. Desarrolla habilidades para la solucion de problemas logicos.</p>
 <p>2.Mayores oportunidades de empleo.</p>
 <p>3. Proporciona mayor capacidad de adaptacion al estilo de vida actual.</p>
