--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type= "text/css"; rel="stylesheet"; href="mi-estilo.css"/>
-		<a href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-		<a href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-		<title>LaprimerapáginadeEmiliaAlcocer</title>
+	<link type= "text/css"; rel="stylesheet"; href="mi-estilo.css"/>
+	<link type= "text/css"; rel="stylesheet"; href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+	<link type= "text/css"; rel="stylesheet"; href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+	<title>LaprimerapáginadeEmiliaAlcocer</title>
 	</head>
 	<body>
 	<div class= "Contenido">
@@ -23,6 +23,12 @@
 			<li>La identificación de nuevas oportunidades de negocio</li>
 			<li>Mejorar nuestro posicionamiento en internet</li>
 		</ul>
+
+		<h3>Experimentando fonts awesome</h3>
+			<ul>
+				<li><i class="fa fa-bicycle"></i></li>
+				<li><i class="fa fa-cab" ></i></li>
+			</ul>
 	<div class="firma">
 		<p>Emilia Alcocer</p>
 		<p><img src="http://i.kinja-img.com/gawker-media/image/upload/t_original/ezgcyx6vdxiftnkad8so.gif"/></p>
