--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 			<ul>
 				<li><i class="fa fa-bicycle"></i></li>
 				<li><i class="fa fa-cab" ></i></li>
+				<li><i class="fa fa-bicycle"></i></li>
+				<li><i class="fa fa-cab" ></i></li>
 			</ul>
 	<div class="firma">
 		<p>Emilia Alcocer</p>
